Re-format all Java files